# jupyter-distributed

./: .gitignore  LICENSE  MANIFEST.in  README.md  USAGE.md  demo.py  pyproject.toml  requirements-dev.txt  setup.py  simple_test.py  test_ast_functionality.py  test_pickling.py  test_registration.py  test_stdout_capture.py
jupyter_distributed/: __init__.py  cli.py  magic.py
jupyter_distributed/utils/: ast.py
notebooks/: Test.ipynb  basic_usage.ipynb  pipeline-parallel.ipynb  test_progress_bar.ipynb  test_tensor_parallel.ipynb
scripts/: patch_transformers.py  test_torch_distributed.py  test_torch_pp.py  test_torch_single.py  test_torch_tp.py
tests/: test_magic.py
